@@ -1,0 +1,11 @@
+[Desktop Entry]
+Encoding=UTF-8
+Version=1.0
+Type=Application
+Name=9x9 Sudoku
+Exec=/opt/9x9_sudoku/gui
+Icon=9x9-sudoku
+X-Window-Icon=9x9-sudoku
+X-Window-Icon-Dimmed=9x9-sudoku
+X-Osso-Service=org.maemo.9x9_sudoku
+X-Osso-Type=application/x-executable
