@@ -15,7 +15,7 @@ clean:
 install: build
 	dh_testdir
 	dh_testroot
-	$(MAKE) install_maemo DESTDIR=`pwd`/debian/thumb-sudoku
+	$(MAKE) install_maemo DESTDIR=`pwd`/debian/9x9-sudoku
 
 binary-indep: build install
 binary-arch: build install
