@@ -1,11 +1,0 @@
-[Desktop Entry]
-Encoding=UTF-8
-Version=1.0
-Type=Application
-Name=Thumb Sudoku
-Exec=/opt/maemo/usr/lib/thumb_sudoku/gui
-Icon=thumb-sudoku
-X-Window-Icon=thumb-sudoku
-X-Window-Icon-Dimmed=thumb-sudoku
-X-Osso-Service=org.maemo.thumb_sudoku
-X-Osso-Type=application/x-executable
